--- a/app/globals.css
+++ b/app/globals.css
@@ -125,3 +125,32 @@ body,
     @apply bg-background text-foreground;
   }
 }
+
+
+/* global.css hoặc animated-button.css */
+.hover-underline::after,
+.hover-underline::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, #ff0000, #00ffff);
+  left: 0;
+  transform: scaleX(0);
+  transition: transform 0.4s ease-out;
+}
+
+.hover-underline::after {
+  bottom: -5px;
+  transform-origin: right;
+}
+
+.hover-underline::before {
+  top: -5px;
+  transform-origin: left;
+}
+
+.hover-underline:hover::after,
+.hover-underline:hover::before {
+  transform: scaleX(1);
+}
